2003-02-16  Mark Riley <markril@users.sourceforge.net>

  * Improvements to high memory Patch 638513
  * Improved motor handler to allow full speed operation.  Previously,
    every 256ms the outputs would float for 1ms when setting the motor
    speed to maximum: motor_a_speed(MAX_SPEED)
  * Moved motor handler to high memory

2003-02-13  Stephen M Moraco <stephmo@users.sourceforge.net>

  * Applied Patches.  For more detail on each, see the closed
    patches still on file at the brickOS sourceforge project web
  * Applied Patch 638513: Make use of high memory (Mech. only)
     (the patch moved mm routines to high mem. This is not 
	  yet decided, so no routines are moved, yet.)
  * Applied Patch 651692: Add setjmp/longjmp (ANSI C support)
  * Applied Patch 668115: Make brickOS work with up-to-date binutils
  * Applied Patch 673995: Patch brickos 0.2.6.09 for *BSD
  * Fixed bug 666378: Motors still running when RCX turned off
     (applied fix described in bug report at site.)

2003-01-11  Ed Manlove <emanlove@users.sourceforge.net>

  * Modified makedepend to $(MAKEDEPEND) in lib/*/Makefiles

2002-12-13  Joseph A Woolley <jawoolley@users.sourceforge.net>

  * Update system time so that motor controller is called every 1ms 
    as in previous version

2002-11-07  Stephen M Moraco <stephmo@users.sourceforge.net>

  * Adjusted configure to prevent false detect of directory as compiler

2002-10-22  Stephen M Moraco <stephmo@users.sourceforge.net>

  * Converted Makefile.common and rest of makefiles to
    support the new ./configure utility
  * Use of ./configure is now required

2002-10-16  Stephen M Moraco <stephmo@users.sourceforge.net>

  * Move Makefile.kernel into boot/Makefile (was only consumer)
  * Finish install targets, add uninstall target
  * Generate & install installed forms of included and demo 
    makefiles (generate by filtering existing then installing)

2002-10-15  Stephen M Moraco <stephmo@users.sourceforge.net>
